<resources>
    <string name="app_name">Web Launcher</string>
    <string name="version">1.3.0</string>
    <string name="reload_title">Refresh</string>
    <string name="blank"></string>
    <string name="prefs">Settings</string>
    <string name="action_wol">WOL</string>
    <string name="action_mouse">Mouse</string>
    <string-array name="server_pref">
        <item >First</item>
    </string-array>
        <string name="TouchBackground">One finger tap: Left-click\nTwo finger tap: Right-click\nTwo finger drag: Scroll\nLong press: Drag</string>
        <string name="firstruntext">Welcome to Web Launcher! To finish the setup process, visit http://avidandrew.com/weblauncher on your computer to install and configure the Viewer. Then, once the viewer is online, click the WOL (power) icon above, add the hostname of the Viewer, and it will be added to the list. If your Viewer does not support WOL, add it to the list and you will still be able to use it after manually powering it on.</string>
    <string name="loading_page">Loading</string>
    <string name="hint_name">Name:</string>
    <string name="hint_ip" translatable="false">IP: leave blank to auto-discover if host is on</string>
    <string name="hint_port">Port:</string>
    <string name="hint_mac">Mac: leave blank to auto-discover if host is on</string>
    <string name="save_button">Save</string>
    <string name="incorrect_input_autodiscover">Auto-discover of IP/MAC failed - is the host on?</string>
    <string name="incorrect_input">Incorrect input data</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_del">Delete</string>
    <string name="send_ok">WOL packet successfully sent</string>
    <string name="send_fail">Error while sending WOL packet:</string>
    <string name="broadcast_checkbox">Broadcast</string>
    <string name="about_1" translatable="false">WebLauncher is an application for launching and controlling webpages on a remote computer. For more information, see <a href="https://avidandrew.com/weblauncher">avidandrew.com/weblauncher</a>.<br/>This app uses code from other open-source apps: <a href="https://github.com/philproctor/SimpleComputerRemote">SimpleComputerRemote</a> and <a href="https://github.com/NFSMONSTR/SimpleWakeOnLan">Simple Wake On Lan</a>Copyright 2018 Maxim Belyaev(NFS_MONSTR)</string>
    <string name="about_showLicense">Show license</string>
    <string name="about_hideLicense">Hide license</string>
    <string name="menu_about">About</string>
    <string name="about_2" translatable="false">This program is free software: you can redistribute it and/or modify\n    it under the terms of the GNU General Public License as published by\n    the Free\n Software Foundation, either version 3 of the License, or\n    (at your option) any later version.\n\n    This program is distributed in the hope that it will be useful,\n    but WITHOUT ANY WARRANTY; without even the implied warranty of\n    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n    GNU General Public License for more details.\n\n    You should have received a copy of the GNU General Public License\n    along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</string>
</resources>