<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_wol"
        android:icon="@drawable/power"
        android:title="@string/action_wol"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_mouse"
          android:icon="@drawable/mouse"
          android:title="@string/action_mouse"
          android:showAsAction="ifRoom" />
    <item
        android:id="@+id/reload"
        android:title="@string/reload_title"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/prefs"
          android:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:showAsAction="never"/>
</menu>