<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.nfsmonstr.simplewakeonlan.AboutActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="18dp"
                    android:layout_toRightOf="@+id/imageView"
                    android:text="@string/about_1" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_2" />

            <ToggleButton
                android:id="@+id/showLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/about_showLicense"
                android:textOn="@string/about_hideLicense" />

            <TextView
                android:id="@+id/licenseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxEms="20"
                android:visibility="invisible"/>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
